--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Terraform
 .terraform/
-terraform.tfstate
-terraform.tfstate.backup
+*.tfstate
+*.tfstate.*
+.terraform.tfstate.lock.info
 lambda.zip
 
 # IDE
